--- a/papers/lambda2023/preamble.tex
+++ b/papers/lambda2023/preamble.tex
@@ -7,7 +7,7 @@
   % get rid of footer
   %\setbeamertemplate{footline}{}
   \setbeamertemplate{section in toc} {\inserttocsectionnumber.~\inserttocsection}
-
+  \usefonttheme{professionalfonts}
 }
 {}
 \makeatother
@@ -78,7 +78,7 @@
 %\usepackage{comment}
 %\usepackage{easyReview}
 %\usepackage{changes}
-% What to pick? 
+% What to pick?
 %https://mengxiangxi.info/BLOG/research/2021/09/20/Good-practice-revising-latex.html
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
@@ -105,7 +105,7 @@
 
 \addtobeamertemplate{title page}{}{
     \begin{center}
-        {\tiny Дата сборки: \DTMtoday.}
+        {\tiny Дата сборки: \DTMtoday}
     \end{center}
 }
 
@@ -294,5 +294,5 @@
 \renewcommand{\epsilon}{\varepsilon}
 \renewcommand{\theta}{\vartheta}
 \renewcommand{\kappa}{\varkappa}
-\renewcommand{\rho}{\varrho} % remember my teacher and friend Adalberto!
+\renewcommand{\rho}{\varrho}
 \renewcommand{\phi}{\varphi}
