--- a/papers/lambda2023/lambda2024.tex
+++ b/papers/lambda2023/lambda2024.tex
@@ -1,5 +1,6 @@
 % !TeX spellcheck = ru_RU
-%% !TEX TS-program = pdflatex
+% !TEX TS-program = xelatex
+
 \documentclass[aspectratio=169
   , xcolor={svgnames}
   , hyperref=
@@ -10,7 +11,6 @@
   ]{beamer}
 
 \usetheme{CambridgeUS}
-\usefonttheme{professionalfonts}
 
 \input{preamble.tex}
 
@@ -28,6 +28,7 @@
 \newcommand{\cbn}{\xarr{cbn}}
 \newcommand{\nor}{\xarr{nor}}
 \newcommand{\ao}{\xarr{ao}}
+\newcommand{\betaarr}{\xarr{\beta}}
 
 \newcommand{\abs}[2]{\ensuremath{(\lambda #1 . #2)}}
 \newcommand{\lam}[2]{\ensuremath{\abs{#1}{#2}}}
@@ -109,9 +110,9 @@
 \everymath{\displaystyle}
 
 % Uncomment these lines for an automatically generated outline.
-\begin{frame}{Оглавление}
-  \tableofcontents
-\end{frame}
+%\begin{frame}{Оглавление}
+%  \tableofcontents
+%\end{frame}
 
 
 \input{01implementation.tex}
@@ -122,16 +123,44 @@
 \begin{frame}%[allowframebreaks]
   \frametitle<presentation>{Ссылки}
   \begin{thebibliography}{10}
-    \bibitem{cppimpl}
-    \newblock {\em Реализация интерпретатора на Си} \url{https://github.com/Kakadu/kakadu.github.io/tree/master/papers/lambda2023/cpp}
-    \bibitem{ocamlimpl}
-    \newblock {\em Реализация интерпретатора на OCaml} \url{https://gitlab.com/Kakadu/fp2020course-materials/-/blob/master/code/Lambda/lib/lambda.ml}
+    \bibitem{litvinov}
+      {\em Слайды Ю.~Литвинова} \newblock\url{https://github.com/yurii-litvinov/courses/tree/master/structures-and-algorithms/03-lambda-calculus}
   \end{thebibliography}
 \end{frame}
 
-\appendix
+%\appendix
 
-\input{appendix.tex}
+%\input{appendix.tex}
 
+\section{Дополнительные слайды}
+
+
+\begin{frame}{Бывают различные стратегии}
+Например,
+\begin{itemize}
+\item Строгие (например, call-by-value $\cbv$) вычисляют аргумент до его подстановки
+\item Ленивые (например, call-by-name $\cbn$)  оставляют вычисление аргумента на потом
+\end{itemize}
+
+
+На практике больше любят стратегии, которые эффективно можно посчитать
+\end{frame}
+
+\begin{frame}{Ленивая vs. Строгая}
+Пример 1 ($\cbv$ выглядит лучше)\\
+$\lam{x}{f x x}(\tr{(\lambda x. x)}\tb{A}) \cbv \tr{(\lambda x. f x x)}\tb{A} \cbv (f A\ A) \cbv \dots $\\
+
+$\tr{\lam{x}{f x x}}\tb{((\lambda x. x)A)} \cbn (\lambda x. f ((\lambda x. x)A) ((\lambda x. x)A))A \cbn \dots $
+
+\vspace{2em}
+Пример 2 ($\cbn$ выглядит лучше)\\
+$(\lambda x. \lambda y. y)(\tr{(\lambda x. xx)}\tb{(\lambda x. xx)}) \cbv (\lambda x. \lambda y. y)(\tr{(\lambda x. xx)}\tb{(\lambda x. xx)}) \cbv \dots \text{зависло}$
+
+$\tr{(\lambda x. \lambda y. y)}\tb{((\lambda x. xx)(\lambda x. xx)) \cbn (\lambda y. y)}\quad\text{ответ!}$
+
+\vspace{2em}
+В обычных языках программирования:
+\lstinline[language=c]=(c>0) ? f() : g() =
+\end{frame}
 
 \end{document}
