--- a/papers/lambda2023/lambda2024.tex
+++ b/papers/lambda2023/lambda2024.tex
@@ -14,10 +14,8 @@
 
 \input{preamble.tex}
 
-\usepackage{tabulary}
 \usepackage{verbatim}
 \usepackage{amsmath}
-\usepackage{relsize}
 
 \newcommand{\term}[2]{\textit{#1} (#2)}
 \newcommand\alphaequiv{\overset{\alpha}{\equiv}}
@@ -36,44 +34,15 @@
 \newcommand{\subst}[3]{\ensuremath{[#1 \mapsto #2]#3}}
 \newcommand{\substt}[3]{\ensuremath{[#2/#1]#3}}
 
-\usepackage{mathpartir}
-\usepackage{tabulary}
-\usepackage{multirow}
-\usepackage{makecell}
-\usepackage{appendixnumberbeamer}
-%%%%%%%%%%%%%%%%%%
-\makeatletter
-%\newenvironment{tabminted}{
-%  \let\FV@ListVSpace\relax
-%  \minted
-%}{
-%  \endminted
-%  \unskip
-%  \aftergroup\@tabmintedend
-%}
-%\newcommand*{\tabminted@finalstrut}[1]{%
-%  \ifdim\prevdepth>0pt
-%    \ifdim\dp#1>\prevdepth
-%      \vskip\dimexpr(\dp#1)-\prevdepth\relax
-%    \fi
-%  \else
-%    \vskip\dimexpr(\dp#1)\relax
-%  \fi
-%}
-%\newcommand*{\@tabmintedend}{%
-%  \let\@finalstrut\tabminted@finalstrut
-%}
-%\renewcommand{\cite}[1]{}
-%\makeatother
-
-
+%\usepackage{mathpartir}
+%\usepackage{tabulary}
+%\usepackage{multirow}
+%\usepackage{makecell}
+%\usepackage{appendixnumberbeamer}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[]{Лямбда-исчисление}
-%\subtitle{Набросок слайдов}
 \author{Косарев Дмитрий}
-
-%\institute{матмех СПбГУ}
-
+\date{20 марта 2024 г.}
 
 \AtBeginSection[]
 {
@@ -92,9 +61,6 @@
 
 \newcommand{\verbatimfont}[1]{\def\verbatim@font{#1}}
 \setcounter{tocdepth}{2}  % part,chapters,sections
-%\newcommand\chap[1]{
-%  \addcontentsline{toc}{chapter}{#1}
-%}
 
 
 \begin{document}
